# Macro-sir-python

./: .gitignore  Módulo1 (1).bas  Módulo2 (1).bas  Módulo3 (1).bas  Módulo4.bas  Módulo5.bas  Módulo6.bas  Módulo7.bas  Módulo8.bas  README.md  pyproject.toml  requirements-dev.txt
analysis/: __init__.py  cli.py  normalization.py  settings.py
tests/: test_excel_parsing.py  test_normalization_core.py
